force-app/main/default/objects/Contact_00D24000000ivfi__dll/fields/Email_opt_in_c__c.field-meta.xml
<CustomField>
    <fullName>Email_opt_in_c__c</fullName>
    <label>Email opt-in</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Email_opt_in_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>