force-app/main/default/objects/Contact_00D24000000ivfi__dll/fields/Is_Sales_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Contact_c__c</fullName>
    <label>Is Sales Contact</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Is_Sales_Contact_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>