force-app/main/default/objects/Contact_00D24000000ivfi__dll/fields/pi_last_activity_c__c.field-meta.xml
<CustomField>
    <fullName>pi_last_activity_c__c</fullName>
    <label>Account Engagement Last Activity</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>pi_last_activity_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>