force-app/main/default/objects/Contact_00D24000000ivfi__dll/fields/pi_score_c__c.field-meta.xml
<CustomField>
    <fullName>pi_score_c__c</fullName>
    <label>Account Engagement Score</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>pi_score_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>