force-app/main/default/objects/Contact_00D24000000ivfi__dll/fields/Salesforce_Certifications_c__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Certifications_c__c</fullName>
    <label>Salesforce Certifications</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Salesforce_Certifications_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>