force-app/main/default/objects/Contact_00D24000000ivfi__dll/fields/Total_Course_Attendances_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Course_Attendances_c__c</fullName>
    <label>Total Course Attendances</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Total_Course_Attendances_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>