force-app/main/default/objects/Contact_00D24000000ivfi__dll/fields/Training_of_Interest_c__c.field-meta.xml
<CustomField>
    <fullName>Training_of_Interest_c__c</fullName>
    <label>Training of Interest</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Training_of_Interest_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>