force-app/main/default/objects/Contact_00D24000000ivfi__dll/fields/Type_of_profile_c__c.field-meta.xml
<CustomField>
    <fullName>Type_of_profile_c__c</fullName>
    <label>Type of profile</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Type_of_profile_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>